istio-ingress/k8s-api-rproxy-tls.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: k8s-api-gateway
spec:
  selector:
    app: ex-gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: https
    hosts:
    - "*"
    tls:
      mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: k8s-api-reverse-proxy
spec:
  hosts:
  - "*"
  gateways:
  - k8s-api-gateway
  tls:
  - match:
    - port: 443
    route:
    - destination:
        host: kubernetes.default.svc.cluster.local
        port:
          number: 443
