istio-ingress/k8s-api-rproxy.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: k8s-api-gateway
spec:
  selector:
    app: ex-gateway
  servers:
  - port:
      number: 31400
      name: tcp
      protocol: TCP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: k8s-api-reverse-proxy
spec:
  hosts:
  - "*"
  gateways:
  - k8s-api-gateway
  tcp:
  - match:
    - port: 31400
    route:
    - destination:
        host: kubernetes.default.svc.cluster.local
        port:
          number: 443
